# ArucoDrone_Marker_Detection_and_Trajectory_Tracking_System

./: .gitignore  .gitmodules  README.md
DEMO/: Results_images  results
aruco_drone/src/px4_offboard/: setup.py
aruco_drone/src/px4_offboard/scripts/: camera_publisher_node.py  detection.py  odometry_logger.py  processes.py
px4_offboard/: setup.py
px4_offboard/launch/: offboard_velocity_control.launch.py
px4_offboard/px4_offboard/: camera_publisher_node.py  camera_tf2_publisher.py  processes.py
px4_offboard/resource/: detect_aruco.py  generate_aruco.py
px4_offboard/resource/arucotag/: model.sdf
px4_offboard/scripts/: camera_publisher_node.py  detection.py  odometry_logger.py  offboard.py  processes.py
src/px4_offboard/: package.xml  setup.py
src/px4_offboard/launch/: offboard_velocity_control.launch.py
src/px4_offboard/resource/: aruco.sdf
src/px4_offboard/scripts/: camera_publisher_node.py  control.py  detection.py  drone_control.py  odometry_logger.py  processes.py  waypoint_navigation.py
