<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_offboard</name>
  <version>0.1.0</version>
  <description>ROS2 PX4 Interface Aruco Drone</description>
  <maintainer email="martinaliberatoscioli@gmail.com">martina</maintainer>
  <license>BSD-3</license>
  
  <!-- Dipendenze PX4 -->
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>detection_package</exec_depend>

  <!-- Dipendenze per Gazebo e il bridge ROS-Gazebo -->
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- Dipendenze per la gestione delle immagini -->
  <exec_depend>cv_bridge</exec_depend>  
  <exec_depend>sensor_msgs</exec_depend> 
  <exec_depend>image_transport</exec_depend>  
  <exec_depend>compressed_image_transport</exec_depend>  
  <exec_depend>camera_info_manager</exec_depend>  

  <!-- Dipendenze per la gestione delle trasformazioni -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Dipendenze per la navigazione e la visualizzazione in RViz -->
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Dipendenze per l'avvio dei nodi -->
  <exec_depend>ros2launch</exec_depend>

  <!-- Dipendenze per i test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

